--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,9 +26,15 @@ ul {
 .tabs {
     display: flex;
     align-items: center;
-    gap: 1.5rem;
+    gap: 2rem;
 }
 
 .tabs li {
     cursor: pointer;
+    font-size: 1.2rem;
+    transition: transform 0.15s;
+}
+
+.tabs li:hover {
+    transform: translateY(-2px);
 }
