--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,11 @@ ul {
     list-style-type: none;
 }
 
+.active {
+    border-bottom: 2px solid #fff;
+    padding-bottom: 3px;
+}
+
 .restaurant-name {
     text-transform: uppercase;
     font-size: 2.1rem;
