--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,9 +11,24 @@
 }
 
 body {
+    min-height: 100vh;
     font-family: "Italiana", serif;
+    font-size: 1.15rem;
     background-color: #000;
     color: #fff;
+    letter-spacing: 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 ul {
@@ -59,7 +74,6 @@ ul {
 }
 
 .hero {
-    letter-spacing: 3px;
     margin: 5rem;
     display: flex;
     flex-direction: column;
@@ -85,8 +99,9 @@ ul {
     margin-bottom: 1rem;
 }
 
-.hero p {
-    font-size: 1.15rem;
+.footer {
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 @media(min-width: 1200px) {
