--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,121 +1,121 @@
-@import url('https://fonts.googleapis.com/css2?family=Italianno&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Italianno&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap');
 
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    min-height: 100vh;
-    font-family: "Italiana", serif;
-    font-size: 1.15rem;
-    background-color: #000;
-    color: #fff;
-    letter-spacing: 3px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  min-height: 100vh;
+  font-family: 'Roboto Slab', serif;
+  font-size: 1.15rem;
+  background-color: #000;
+  color: #fff;
+  letter-spacing: 3px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .active {
-    border-bottom: 2px solid #ff4242;
-    padding-bottom: 3px;
+  border-bottom: 2px solid #ff4242;
+  padding-bottom: 3px;
 }
 
 .header {
-    background-color: #fafafa;
-    color: #000;
-    display: flex;
-    justify-content: space-between;
-    padding: 1.2rem 5rem;
+  background-color: #fafafa;
+  color: #000;
+  display: flex;
+  justify-content: space-between;
+  padding: 1.2rem 5rem;
 }
 
 .restaurant-name {
-    font-family: "Italianno", serif;
-    text-transform: uppercase;
-    font-size: 2.5rem;
-    color: #ff4242;
+  font-family: "Italianno", serif;
+  text-transform: uppercase;
+  font-size: 2.5rem;
+  color: #ff4242;
 }
 
 .tabs {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
 }
 
 .tabs li {
-    cursor: pointer;
-    font-size: 1.1rem;
-    font-weight: 600;
-    letter-spacing: 1.5px;
-    transition: transform 0.15s;
+  cursor: pointer;
+  font-size: 1.1rem;
+  font-weight: 600;
+  letter-spacing: 1.5px;
+  transition: transform 0.15s;
 }
 
 .tabs li:hover {
-    transform: translateY(-2px);
+  transform: translateY(-2px);
 }
 
 .hero {
-    margin: 5rem;
-    display: flex;
-    flex-direction: column;
+  margin: 5rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .hero-text {
-    max-width: 60ch;
-    text-align: center;
-    align-self: center;
+  max-width: 60ch;
+  text-align: center;
+  align-self: center;
 }
 
 .hero img {
-    width: 100%;
-    min-width: 30rem;
-    border-radius: 1rem;
-    border-top-left-radius: 35%;
-    border-bottom-right-radius: 35%;
-    margin-bottom: 3rem;
+  width: 100%;
+  min-width: 30rem;
+  border-radius: 1rem;
+  border-top-left-radius: 35%;
+  border-bottom-right-radius: 35%;
+  margin-bottom: 3rem;
 }
 
 .hero h2 {
-    font-size: 1.8rem;
-    margin-bottom: 1rem;
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
 }
 
 .footer {
-    text-align: center;
-    margin-bottom: 1rem;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
-@media(min-width: 1200px) {
-    .hero {
-        flex-direction: row;
-        gap: 5rem;
-    }
+@media (min-width: 1200px) {
+  .hero {
+    flex-direction: row;
+    gap: 5rem;
+  }
 
-    .hero img {
-        width: 50%;
-        margin-bottom: 0;
-    }
+  .hero img {
+    width: 50%;
+    margin-bottom: 0;
+  }
 
-    .hero-text {
-        text-align: left;
-    }
+  .hero-text {
+    text-align: left;
+  }
 }
