--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Italianno&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap");
 
 *,
 *::before,
@@ -12,7 +12,7 @@
 
 body {
   min-height: 100vh;
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   font-size: 1.15rem;
   background-color: #000;
   color: #fff;
@@ -96,7 +96,7 @@ ul {
 }
 
 .hero img:hover {
-    border-radius: 1rem;
+  border-radius: 1rem;
 }
 
 .hero h2 {
