move tab margin to the content div

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -40,6 +40,10 @@ ul {
   padding-bottom: 3px;
 }
 
+#content {
+  margin: 5rem;
+}
+
 .header {
   background-color: #fafafa;
   color: #000;
@@ -74,7 +78,6 @@ ul {
 }
 
 .hero {
-  margin: 5rem;
   display: flex;
   flex-direction: column;
 }
