--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -127,3 +127,39 @@ ul {
     text-align: left;
   }
 }
+#menu-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#menu-content h2 {
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.menu-steps {
+  text-align: center;
+}
+
+.menu-steps h3 {
+  margin-bottom: 0.5rem;
+}
+
+.menu-steps ul {
+  margin-bottom: 3rem;
+}
+
+.menu-steps li {
+  margin-bottom: 0.3rem;
+}
+
+@media(min-width: 900px) {
+  .menu-steps {
+    display: grid;
+    align-content: center;
+    justify-content: center;
+    gap: 1rem 4rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
