--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -77,6 +77,12 @@ ul {
   transform: translateY(-2px);
 }
 
+.footer {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+/* Home page styles */
 .hero {
   display: flex;
   flex-direction: column;
@@ -107,11 +113,6 @@ ul {
   margin-bottom: 1rem;
 }
 
-.footer {
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
 @media (min-width: 1200px) {
   .hero {
     flex-direction: row;
@@ -127,6 +128,8 @@ ul {
     text-align: left;
   }
 }
+
+/* Menu page styles */
 #menu-content {
   display: flex;
   flex-direction: column;
