--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,4 +1,10 @@
 .footer {
-    text-align: center;
-    margin-bottom: 1rem;
-  }
+  display: flex;
+  justify-content: space-between;
+  margin: 0 5rem;
+  padding-bottom: 1rem;
+}
+
+.footer a {
+  color: #ff4242;
+}
